objects/Partner_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Notifications</relationshipLabel>
        <relationshipName>Partner_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bookings_Target__c</fullName>
        <label>Bookings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Notification</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Partner Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>